main-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssl-generation
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ssl-generation
  template:
    metadata:
      labels:
        app: ssl-generation
    spec:
      containers:
        - name: ssl-generation
          image: k4mrul/nginx-certbot:v5
          volumeMounts:
            - name: kube-eu-volume
              mountPath: /kube-eu.yaml
              subPath: kube-eu.yaml
            - name: kube-sg-volume
              mountPath: /kube-sg.yaml
              subPath: kube-sg.yaml
            - name: kube-us-volume
              mountPath: /kube-us.yaml
              subPath: kube-us.yaml
            - name: ssl-certs
              mountPath: /etc/letsencrypt/live
      volumes:
        - name: kube-eu-volume
          secret:
            secretName: kube-eu
            items:
              - key: kube-eu.yaml
                path: kube-eu.yaml
        - name: kube-sg-volume
          secret:
            secretName: kube-sg
            items:
              - key: kube-sg.yaml
                path: kube-sg.yaml
        - name: kube-us-volume
          secret:
            secretName: kube-us
            items:
              - key: kube-us.yaml
                path: kube-us.yaml
        - name: ssl-certs
          hostPath:
            path: /home/ubuntu/live-certs
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: ssl-generation-service
  namespace: default
spec:
  selector:
    app: ssl-generation
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ssl-generation-ingress
  namespace: default
  annotations:
    # Add your annotations here if needed
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: ssl-generation-service
                port:
                  number: 80
# kubectl create secret generic kube-sg --from-file=kube-sg.yaml -n default
